syntax = "proto3";

package com.distkv.rpc.protobuf;

import "common_pb.proto";

option java_package="com.distkv.rpc.protobuf.generated";
option java_outer_classname = "DropProtocol";
option cc_generic_services = true;

message DropRequest {
};

message DropResponse {
};
